# ILAE

./: .gitignore  .license-header.txt  .pre-commit-config.yaml  CHANGELOG.md  CI_FIXES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.dashboard  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  env.example  mkdocs.yml  models.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
cli/: jmlctl.py
connectors/: __init__.py  aws_connector.py  azure_connector.py  base_connector.py  github_connector.py  google_connector.py  slack_connector.py
engine/: access_matrix.yaml  policy_mapper.py  state_manager.py
examples/: sample_hr_event.json
ingestion/: __init__.py  hr_event_listener.py
ingestion/formats/: bamboo.py  base.py
jml_engine/: __init__.py  models.py
jml_engine/api/: server.py
jml_engine/audit/: __init__.py  audit_logger.py  evidence_store.py
jml_engine/cli/: jmlctl.py
jml_engine/connectors/: __init__.py  aws_connector.py  azure_connector.py  base_connector.py  github_connector.py  google_connector.py  slack_connector.py
jml_engine/dashboard/: app.py
jml_engine/engine/: __init__.py  policy_mapper.py  role_mappings.yaml  state_manager.py
jml_engine/ingestion/: __init__.py  hr_event_listener.py
jml_engine/ingestion/formats/: bamboo.py  base.py  csv_loader.py  workday.py
jml_engine/workflows/: __init__.py  base_workflow.py  helpers.py  joiner.py  leaver.py  mover.py
scripts/: deploy.sh  health_check.py
tests/: test_api.py  test_integration.py  test_joiner.py  test_mover.py
workflows/: base_workflow.py  joiner.py  leaver.py  mover.py
